--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/indyblue/sqlite.das"
+  },
   "license": "MIT",
   "dependencies": {
     "sqlite3": "^4.0.0"
